<resources>
    <string name="app_name">EpifiAssessment</string>

    <string name="ps_header">S.</string>
    <string name="ps_sub_header">First of the few steps to set you up with a Bank Account</string>
    <string name="hint_pan_number">PAN NUMBER</string>
    <string name="hint_birth_date">BIRTHDATE</string>
    <string name="ps_footer_note">Providing PAN &amp; Date of Birth helps us find and fetch your KYC from a
        central registry by the Government of India. <font color="#FF3700B3">Learn more</font></string>
    <string name="hint_next">NEXT</string>
    <string name="hint_i_dont_have_a_pan">I don\'t have a PAN</string>
    <string name="submit_msg">Details submitted successfully</string>
</resources>