<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    tools:context=".panValidator.PanValidatorActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04"/>

    <TextView
        android:id="@+id/tv_header"
        style="@style/PanHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ps_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_top"/>

    <TextView
        android:id="@+id/tv_sub_header"
        style="@style/PanSubHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/ps_sub_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/tv_hint_pan_number"
        style="@style/InputHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/hint_pan_number"
        app:layout_constraintBottom_toTopOf="@+id/et_pan"
        app:layout_constraintStart_toStartOf="@+id/et_pan"/>

    <EditText
        android:id="@+id/et_pan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ps_et_height"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_rounded_edit_text"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="10"
        android:maxLines="1"
        android:nextFocusForward="@id/et_birth_date"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_middle"/>

    <TextView
        android:id="@+id/tv_hint_birth_date"
        style="@style/InputHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hint_birth_date"
        app:layout_constraintStart_toStartOf="@id/et_pan"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_middle"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/et_birth_date"
        style="@style/InputBirthdayEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/ps_et_height"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:maxLength="2"
        android:imeOptions="actionNext"
        android:nextFocusForward="@id/et_birth_month"
        app:layout_constraintEnd_toStartOf="@id/et_birth_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_birth_date"
        app:layout_constraintVertical_chainStyle="spread"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/et_birth_month"
        style="@style/InputBirthdayEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/ps_et_height"
        android:layout_marginEnd="20dp"
        android:imeOptions="actionNext"
        android:maxLength="2"
        android:nextFocusForward="@id/et_birth_year"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical_middle"
        app:layout_constraintStart_toEndOf="@id/et_birth_date"
        app:layout_constraintTop_toTopOf="@id/et_birth_date"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/et_birth_year"
        style="@style/InputBirthdayEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/ps_et_height"
        android:imeOptions="actionDone"
        android:maxLength="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_middle"
        app:layout_constraintTop_toTopOf="@id/et_birth_month"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_foot_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/ps_footer_note"
        android:textSize="@dimen/ps_footer_note"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:enabled="false"
        android:text="@string/hint_next"
        app:layout_constraintBottom_toTopOf="@id/tv_dont_have_pan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_dont_have_pan"
        style="@style/PanFooterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_i_dont_have_a_pan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>